--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
     <a-nft
       type="nft"
-      url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
+      url="nft/kit"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
